# Landing_Gear

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SERVICE_BLUEPRINT_CHECKLIST.md  SERVICE_SKELETON.md  STARTER_RENAME_GUIDE.md  conf.example.toml  conf.toml  install.py  pyproject.toml  service.py
.github/workflows/: ci.yml
hello_service/core_modules/: hello.py
hello_service/domain/: __init__.py  repository.py
landing_gear/: __init__.py  app.py  auth.py  calls.py  config.py  config_profile.py  context.py  decorators.py  errors.py  events.py  health.py  hooks.py  install_support.py  loader.py  logging.py  manifests.py  modules.py  plugins.py  registry.py  requests.py  responses.py  service_factory.py  service_shape.py  storage.py  tls.py  trace_context.py  trustd_pki.py  typing.py  utils.py
landing_gear/plugins/: __init__.py  base.py  diagnostics.py  ledger.py  registry.py  trustd.py  trustd_auth.py
landing_gear/testing/: smoke.py
tests/: test_config_validation.py  test_http_endpoints.py  test_packaging_artifacts.py  test_starter_regressions.py  test_template_hygiene.py
